# goiania-noise-monitor

./: .env.example  .gitignore  README.md  SPEC_goiania_noise_monitor.md  SPEC_v2.2.md  check_log.jsonl  goiania-noise-monitor-prompt.md  pyproject.toml  state.json
.github/workflows/: ci.yml  monitor.yml
src/: analyzer.py  check_log.py  config.py  main.py  models.py  state.py  telegram_client.py
src/sources/: _http.py  base.py  bilheteria.py  eventim.py  google_search.py  instagram.py  linktree.py  sympla.py  wix_site.py
tests/: test_analyzer.py  test_check_log.py  test_http_retry.py  test_instagram.py  test_scoring_edge_cases.py  test_sources.py  test_state.py  test_telegram_retry.py
tests/fixtures/: bilheteria_with_event.html  duckduckgo_results.html  sympla_no_event.html  sympla_with_event.html
